# dice-web

./: .git.pre-commit  .gitignore  Cargo.toml  LICENSE  README.md
src/: dice.rs  lib.rs
www/: index.html  index.js  package-lock.json  package.json
